--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,8 @@ jobs:
         run: npm run build
 
       - name: Upload artifact for GitHub Pages
-        uses: actions/upload-pages-artifact@v1
+        # Use v2 which avoids the deprecated upload-artifact v3 dependency
+        uses: actions/upload-pages-artifact@v2
         with:
           path: ./dist
 
